small change to temporarily remove the saving of org and user on project add until base data is clean enough

--- a/modules/artifacts/client/views/partial.artifact-edit.html
+++ b/modules/artifacts/client/views/partial.artifact-edit.html
@@ -4,7 +4,7 @@
 		This section gets displayed if the content is a template
 
 	 -->
-	<tmpl-template-render x-template="artifact.template" x-mode="edit" x-document="artifact.templateData"></tmpl-template-render>
+	<tmpl-template-render x-template="artifact.template" x-mode="edit" x-project="project" x-document="artifact.templateData"></tmpl-template-render>
 </div>
 
 
