--- a/modules/recent-activity/client/views/recent-activity.html
+++ b/modules/recent-activity/client/views/recent-activity.html
@@ -1,7 +1,15 @@
 <section class="panel panel-default" ng-repeat="activity in recentActs" ng-class="{'watermark-chat': activity.type === 'Public Comment Period', 'watermark-news': activity.type === 'News'}">
 	<div class='panel-body news-headline clickable' ui-sref="p.detail({projectid: projectlookup[activity.project].code })">
-		<h3>{{ activity.headline }}</h3>
-		<p><pre>{{ activity.content }}</pre></p>
+		<h5>{{ activity.headline }}</h5>
+		<p class="small" ng-if="!activity.showmore">
+			{{ limitWords(activity.content, 30) }}
+			<button class="btn btn-xs btn-link" ng-click="$event.stopPropagation();activity.showmore=!activity.showmore"> more</button>
+		</p>
+		<p class="small" ng-if="activity.showmore">
+			<button class="btn btn-xs btn-link" ng-click="$event.stopPropagation();activity.showmore=!activity.showmore"> less</button><br/>
+			{{ activity.content }}
+			<button class="btn btn-xs btn-link" ng-click="$event.stopPropagation();activity.showmore=!activity.showmore"> less</button>
+		</p>
 		<p class="small">{{ activity.dateAdded | date }}</p>
 		<p class="small">{{ activity.type }}</p>
 	</div>
