--- a/modules/conditions/client/views/condition-edit.html
+++ b/modules/conditions/client/views/condition-edit.html
@@ -6,8 +6,8 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<button class="btn btn-default" ui-sref="admin.condition.list">Cancel</button>
-		<button class="btn btn-default" type="submit">Save</button>
+		<button class="btn btn-xs btn-link" ui-sref="admin.condition.list">Cancel</button>
+		<button class="btn btn-xs btn-link" href type="submit">Save</button>
 	</div>
 </div>
 
