Artifact Pages formatting

--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -14,11 +14,11 @@
 	</div>
 </div>
 
-<div class="block-content" ng-include="'/modules/artifacts/client/views/partial.artifact-edit.html'"></div>
+<div ng-include="'/modules/artifacts/client/views/partial.artifact-edit.html'"></div>
 
-<div class="block-content" ng-include="'/modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+<div ng-include="'/modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 
-<div class="block-content" ng-include="'/modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+<div ng-include="'/modules/artifacts/client/views/partial.artifact-comments.html'"></div>
 
 <div class="panel panel-default">
 	<div class="panel-body">
