--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -2,15 +2,18 @@
 	{{artifact.type.type}} for {{ project.name }}
 </h1>
 
-<div class="block-content">
-	<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
+<div class="text-right">
+	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
+	<a class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 </div>
 
-<div  class="block-content" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
 
-<div  class="block-content" ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 
-<div>
+<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
+<div class="text-right form-group">
 	<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-	<a class="btn btn-success" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
+	<a class="btn btn-default" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 </div>
