--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -45,7 +45,7 @@
 		class="anchor-section"
 		id="anchor-activities"
 		x-project="project"
-		ng-if="('project'| shouldDisplayPanel:'activities':project.status) && environment === 'EAO' && 0">
+		ng-if="('project'| shouldDisplayPanel:'activities':project.status) && environment === 'EAO'">
 	</tmpl-project-activities>
 
 	<tmpl-documents-browser
