--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -1,76 +1,38 @@
-<section id="projects-view" class="row">
-	<div ng-if="authentication.user">		
-		<ui-view class='col-sm-10'>
+<section id="projects-view" class="row">		
+	<ui-view ng-class="{'col-sm-10': authentication.user, 'col-sm-12': !authentication.user}">
 
-			<div class="panel panel-default" ng-show="environment === 'MEM' &&!authentication.user">
-				<div class="panel-heading">
-					<h3 class="panel-title">Public Project Listing</h3>
-				</div>
-				<div class='panel-body'>
-					<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to post the following documents online:</p>
-					<ul>
-					<li>Permits and amendments for major mines</li>
-					<li>MEM inspection reports (2013 onwards)</li>
-					<li>Dam safety inspections/reviews (2013 onwards)</li>
-					<li>Annual reclamation reports (2013 onwards)</li>
-					</ul> 
-					<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
-				</div>
+		<div class="panel panel-default" ng-show="environment === 'MEM' && !authentication.user">
+			<div class="panel-heading">
+				<h3 class="panel-title">Public Project Listing</h3>
 			</div>
-
-			<div class="row">
-				<div class="col-sm-4 activity-list-med">
-					<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>
-				</div>
-				<div class="col-sm-8">
-					<tmpl-projects-map id="anchor-map" x-projects='projects'></tmpl-projects-map>					
-				</div>
+			<div class='panel-body'>
+				<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to post the following documents online:</p>
+				<ul>
+				<li>Permits and amendments for major mines</li>
+				<li>MEM inspection reports (2013 onwards)</li>
+				<li>Dam safety inspections/reviews (2013 onwards)</li>
+				<li>Annual reclamation reports (2013 onwards)</li>
+				</ul> 
+				<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
 			</div>
-			<div class="row">
-				<div class="col-sm-12">
-					<tmpl-projects-list2 id="anchor-list" x-projects='projects'></tmpl-projects-list2>
-				</div>
-			</div>
-
-		</ui-view>		
-		<div class='col-sm-2'>
-			<tmpl-system-menu x-menu-context="'projects'"></tmpl-system-menu>
 		</div>
-	</div>
 
-	<div ng-if="!authentication.user">
-		<ui-view class='col-sm-12'>
-
-			<div class="panel panel-default" ng-show="environment === 'MEM' &&!authentication.user">
-				<div class="panel-heading">
-					<h3 class="panel-title">Public Project Listing</h3>
-				</div>
-				<div class='panel-body'>
-					<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to post the following documents online:</p>
-					<ul>
-					<li>Permits and amendments for major mines</li>
-					<li>MEM inspection reports (2013 onwards)</li>
-					<li>Dam safety inspections/reviews (2013 onwards)</li>
-					<li>Annual reclamation reports (2013 onwards)</li>
-					</ul> 
-					<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
-				</div>
+		<div class="row">
+			<div class="col-sm-4 activity-list-med">
+				<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>
 			</div>
-
-			<div class="row">
-				<div class="col-sm-4 activity-list-med">
-					<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>
-				</div>
-				<div class="col-sm-8">
-					<tmpl-projects-map id="anchor-map" x-projects='projects'></tmpl-projects-map>
-				</div>
+			<div class="col-sm-8">
+				<tmpl-projects-map id="anchor-map" x-projects='projects'></tmpl-projects-map>					
 			</div>
-			<div class="row">
-				<div class="col-sm-12">
-					<tmpl-projects-list2 id="anchor-list" x-projects='projects'></tmpl-projects-list2>
-				</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<tmpl-projects-list2 id="anchor-list" x-projects='projects'></tmpl-projects-list2>
 			</div>
+		</div>
 
-		</ui-view>
+	</ui-view>		
+	<div class='col-sm-2' ng-if="authentication.user">
+		<tmpl-system-menu x-menu-context="'projects'"></tmpl-system-menu>
 	</div>
 </section>
