--- a/modules/utils/client/views/partials/modal-date-picker.html
+++ b/modules/utils/client/views/partials/modal-date-picker.html
@@ -7,8 +7,7 @@
 	</div>
 
 	<div class="form-group table-center well well-sm">
-		<datepicker ng-model="modalDatePick.chosenDate" data-on-set-time="modalDatePick.onTimeSet(newDate, oldDate)" ng-show="
-			modalDatePick.showSelector"></datepicker>
+		<datepicker ng-model="modalDatePick.chosenDate" data-on-set-time="modalDatePick.onTimeSet(newDate, oldDate)" ng-show="modalDatePick.showSelector"></datepicker>
 	</div>
 	
 	<div class="form-group table-center well well-sm">	
@@ -17,6 +16,7 @@
 
 </div>
 <div class="modal-footer">
-	<button class="btn btn-warning" type="button" ng-click="modalDatePick.cancel()">Cancel</button>
-	<button class="btn btn-primary" type="button" ng-click="modalDatePick.ok()">OK</button>
+	<button class="btn btn-warning" type="button" ng-click="modalDatePick.none()">None</button>
+	<button class="btn btn-default" type="button" ng-click="modalDatePick.cancel()">Cancel</button>
+	<button class="btn btn-default" type="button" ng-click="modalDatePick.ok()">OK</button>
 </div>
