--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -1,5 +1,15 @@
 <h1 class="page-title">{{ project.name }}</h1>
 
+<form name="projectForm" ng-submit="saveProject(projectForm.$valid)" novalidate>
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<button class="btn btn-xs btn-link" ui-sref="p.detail">Cancel</button>
+		<button class="btn btn-xs btn-link" href type="submit">Save</button>
+		<button class="btn btn-xs btn-link" href ng-click="submitProject(projectForm.$valid)" ng-if="project.status === 'Initiated'">Submit Project</button>
+	</div>
+</div>
+
 <section class="panel panel-default">
 
 	<div class="panel-body">
@@ -14,21 +24,27 @@
 
 			<div class="row">
 				<div class="col-sm-6">
-					<div class="form-group">
+					<div class="form-group" x-show-errors>
 						<label for="title" class="control-label">Project Name</label>
-						<input id="title" type="text" class="form-control input-sm"
-							ng-model="project.name">
+						<input id="title" name="name" type="text" class="form-control input-sm" ng-model="project.name" required>
+							<div ng-messages="projectForm.name.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Project Name is required.</p>
+							</div>
 					</div>
 				</div>
 				<div class="col-sm-3">
-					<div class="form-group">
+					<div class="form-group" x-show-errors>
 						<label for="shortName" class="control-label">Short Name (25 Characters Max)</label>
 						<input id="shortName"
+							name="shortName"
 							maxlength="25"
 							type="text"
 							class="form-control input-sm"
 							ng-model="project.shortName"
-							ng-blur="project.code = _.kebabCase(project.shortName);">
+							ng-blur="project.code = _.kebabCase(project.shortName);" required>
+							<div ng-messages="projectForm.shortName.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Short Name is required.</p>
+							</div>
 					</div>
 				</div>
 				<div class="col-sm-3">
@@ -55,9 +71,12 @@
 
 			<div class="row">
 				<div class="col-sm-6">
-					<div class="form-group">
+					<div class="form-group" x-show-errors>
 						<label for="type" class="control-label">Type</label>
-						<select id="type" ng-model='project.type' class="form-control input-sm" ng-options="type as type for type in types"></select>
+						<select id="type" name="type" ng-model='project.type' class="form-control input-sm" ng-options="type as type for type in types" required></select>
+							<div ng-messages="projectForm.type.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Type is required.</p>
+							</div>
 					</div>
 				</div>
 
@@ -85,9 +104,12 @@
 					</div>
 				</div>
 				<div class="col-sm-4">
-					<div class="form-group">
+					<div class="form-group" x-show-errors>
 						<label for="region" class="control-label">Region</label>
-						<select if="region" ng-model='project.region' class="form-control input-sm" ng-options="key as value for (key, value) in regions"></select>
+						<select if="region" name="region" ng-model='project.region' class="form-control input-sm" ng-options="key as value for (key, value) in regions" required></select>
+							<div ng-messages="projectForm.region.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Region is required.</p>
+							</div>
 					</div>
 				</div>
 			</div>
@@ -175,14 +197,14 @@
 				<div class="form-control-static">{{ project.dateUpdated | amDateFormat:'MMM Do, YYYY hh:mm a' }}</div>
 			</div>
 			<div class="col-sm-6 text-right">
-				<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-				<a class="btn btn-success" href ng-click="saveProject()">Save</a>
-				<a class="btn btn-success" href ng-click="submitProject()" ng-if="project.status === 'Initiated'">Submit Project</a>
+				<button class="btn btn-default" ui-sref="p.detail">Cancel</button>
+				<button class="btn btn-default" type="submit">Save</button>
+				<button class="btn btn-default" ng-click="submitProject(projectForm.$valid)" ng-if="project.status === 'Initiated'">Submit Project</button>
 			</div>
 		</div>
 	</div> <!-- /panelbody -->
 
 </section>
 
-
+</form>
 
