--- a/modules/users/client/views/user-partials/user-activities.html
+++ b/modules/users/client/views/user-partials/user-activities.html
@@ -1,14 +1,21 @@
 <section id="project-view" class="row">
 
 	<div class='col-sm-10'>
-		<h1 class="page-title">
+		<h1 class="page-title no-lower-margin">
 			All Activities
 		</h1>
-
+		<div class="row ng-scope">
+			<div class="col-sm-12 text-right">
+				<a href class="btn btn-xs btn-link" ng-click="show_filter = !show_filter">
+					<span ng-show="show_filter"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></span>
+					<span ng-show="!show_filter"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> <span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></span>
+				</a>
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-sm-12">
 				<section class="panel panel-default">
-					<table ng-table="tableParams" class="table table-condensed table-striped table-hover">
+					<table x-show-filter="show_filter" ng-table="tableParams" class="table table-condensed table-striped table-hover">
 						<tr ng-repeat="o in $data | orderBy:'order'"
 							ng-href="{{getLinkUrl(o.state, o.data)}}"
 							class="clickable">
