--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -206,7 +206,9 @@ th > .progress {
 .ng-table-filters th {
 	font-weight: 500;
 }
-
+.ng-table th {
+	text-align: left;
+}
 pre {
 	padding: 0;
 	margin: 0;
@@ -1137,6 +1139,11 @@ h2.page-title {
 .list-array-item {
 	margin-bottom: 3px;
 	padding: 3px 5px;
+}
+
+
+.svg-div-timeline {
+	padding: 15px;
 }
 
 /*
