--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -1,5 +1,6 @@
 <div class='panel-body'>
-	<div class='row'>
+
+	<div class='row' ng-if="environment === 'EAO'">
 		<div class='col-sm-3'>
 			<div><label class="control-label">Type</label><p>{{ project.type }}</p></div>
 			<div><label class="control-label">Location</label><p>{{ project.location }}</p></div>
@@ -17,6 +18,29 @@
 				<pre ng-bind-html="project.description"></pre>
 			</div>
 		</div>
-
 	</div>
+
+	<div class='row' ng-if="environment === 'MEM'">
+
+		<div class='col-sm-3'>
+			<div><label class="control-label">Permit Number</label><p>{{ project.memPermitID }}</p></div>
+			<div><label class="control-label">Proponent / Operator</label><p>{{ project.proponent.name }}</p></div>
+			<div><label class="control-label">Ownership</label><p>{{ project.ownership }}</p></div>
+			<div><label class="control-label">Latitude</label><p>{{ project.lat }}</p></div>
+			<div><label class="control-label">Longitude</label><p>{{ project.lon }}</p></div>
+		</div>
+		<div class='col-sm-3'>
+			<div><label class="control-label">Phase</label><p>{{ project.currentPhase.name }}</p></div>
+			<div><label class="control-label">Commodity / IES</label><p>{{ project.commodity }}</p></div>
+			<div><label class="control-label">Region</label><p>{{ project.region | regionName }}</p></div>
+			<div><label class="control-label">Tailing Impoundments</label><p>{{ project.tailingsImpoundments }}</p></div>
+		</div>
+		<div class='col-sm-6'>
+			<div>
+				<label class="control-label">Description</label>
+				<pre ng-bind-html="project.description"></pre>
+			</div>
+		</div>
+	</div>
+
 </div><!--  /project-info-large -->
