--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -21,6 +21,7 @@
 		<div ng-show="menu.authentication.user">
 			<ul class="list-unstyled">
 				<li><a href ui-sref="activities">My List</a></li>
+				<li><a href ui-sref="projects.schedule">Schedule</a></li>
 			</ul>
 			<hr>
 		</div>
@@ -63,6 +64,7 @@
 		<div>
 			<ul class="list-unstyled" >
 				<li><a ui-sref="projects" href>All Projects</a></li>
+				<li><a href ui-sref="projects.schedule">Schedule</a></li>
 			</ul>
 			<hr>
 		</div>
@@ -97,6 +99,7 @@
 
 		<ul class="list-unstyled">
 			<li><a ui-sref="projects" href>All Projects</a></li>
+			<li><a href ui-sref="projects.schedule">Schedule</a></li>
 			<li><a ui-sref="p.detail({projectid: menu.project.code})" href>{{ menu.project.name }}</a></li>
 			<li><a ng-click="menu.goToPrevious()" href>Back</a></li>
 		</ul>
@@ -139,6 +142,7 @@
 
 		<ul class="list-unstyled">
 			<li><a ui-sref="projects" href>All Projects</a></li>
+			<li><a href ui-sref="projects.schedule">Schedule</a></li>
 			<li><a ng-click="menu.goToPrevious()" href>Back</a></li>
 		</ul>
 		<div ng-show="menu.authentication.user">
