--- a/modules/projects/client/views/projects-partials/projects-schedule.html
+++ b/modules/projects/client/views/projects-partials/projects-schedule.html
@@ -21,7 +21,7 @@
 				<td ng-if="project.status === 'In Progress'">{{ project.currentPhase.name }}</td>
 				<td ng-if="project.status === 'In Progress'" colspan="5" class="schedule-control-cell">
 				<!-- show schedule widget -->
-					<tmpl-schedule-chart x-project="project" x-phases="allPhases"></tmpl-schedule-chart>
+					<tmpl-schedule-chart x-project="project" x-phases="allPhases" id="{{ project.code }}"></tmpl-schedule-chart>
 				</td>
 
 				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.name }}</td>
